# aitools

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  Makefile  README.md  celery_worker.py  docker-compose.yml  fly.toml  fly.worker.toml  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml  fly-deploy.yml  release.yml
src/: config.py  logging_config.py  main.py
src/api/: exceptions.py  models.py  routes.py
src/core/: celery_app.py  config.py  health.py  logging_config.py  models.py  state.py  storage.py  utils.py
src/core/logging/: __init__.py  config.py  core.py  formatters.py  handlers.py
src/services/: llm.py  models.py  parser.py  prompts.py
src/tasks/: __init__.py  pipeline.py  queue.py  standalone.py  tasks.py
tests/: conftest.py  sample.json  test_api_models.py  test_health.py  test_llm_integration.py  test_parser.py  test_routes.py  test_state.py  test_storage.py  test_tasks.py
tests/samples/: component_refs.yaml  invalid_operation.yaml  malformed_responses.yaml  method_connect.yaml  method_delete.yaml  method_get.yaml  method_head.yaml  method_invalid.yaml  method_options.yaml  method_patch.yaml  method_post.yaml  method_put.yaml  method_trace.yaml  missing_info.yaml  missing_openapi.yaml  missing_paths.yaml  petstore.yaml  sample.json  sample.yaml  swagger.yaml  valid_spec.yaml
web/: index.html
